adding sflow hw-module config

--- a/exec/tests/v2/oc_compliance.yaml
+++ b/exec/tests/v2/oc_compliance.yaml
@@ -74,3 +74,10 @@ tests:
   internal: true
   owners:
   - agvarghe
+- name: SFLOW-OC
+  path: feature/cisco/sampling/...
+  timeout: 7200
+  branch: master
+  internal: true
+  owners:
+  - agvarghe
