--- a/topologies/cisco/pyvxr/8808-OC-FURY/basefp.conf
+++ b/topologies/cisco/pyvxr/8808-OC-FURY/basefp.conf
@@ -193,6 +193,7 @@ vty-pool default 0 99 line-template default
 cef proactive-arp-nd enable
 hw-module profile pbr vrf-redirect
 hw-module profile npu-compatibility Q200
+hw-module profile netflow sflow-enable location 0/0/cpu0
 ssh server v2
 ssh server vrf default
 ssh timeout 120
