--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,9 +53,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
         go-version: '1.19'
+        cache: false
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Cache
