--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -169,8 +169,8 @@ tests:
     timeout: 3600
     mustpass: true
     args:
-      - '-osfile="/auto/ioxdepot6/GISO/giso_build_lindt/giso_custom_create/rmariapp_2023-07-29_18-03-05_UTC/output_gisobuild/giso/8000-golden-x86_64-7.11.1.191G-192G.iso"'
-      - '-osver="7.11.1.191G-192G"'
+      - '-osfile="/ws/mranegin-sjc/8000-x64.iso"'
+      - '-osver="24.1.1.07I"'
     skip: true
   - name: gNOI-5.1 (Ping Test)
     path: feature/gnoi/system/tests/ping_test
