--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -316,12 +316,14 @@ tests:
       - agvarghe
     mustpass: true
     priority: 34
+    skip: true # removed, OTG only
   - name: gNMI-1.11 (Telemetry Interface Packet Counters)
     path: feature/gnmi/ate_tests/telemetry_interface_packet_counters_test
     owners:
       - agvarghe
     priority: 35
     mustpass: true
+    skip: true # removed, OTG only
   - name: gNMI-1.13 (Telemetry Optics Power and Bias Current)
     path: feature/platform/tests/optics_power_and_bias_current_test
     owners:
