--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -5,7 +5,7 @@ testbeds:
     binding: topologies/cisco/hw/8808_FOX2506P2QT/binding
     baseconf: topologies/cisco/hw/8808_FOX2506P2QT/baseconfig.proto
     otg:
-      host: kne2-lnx
+      host: 10.85.17.225
       controller_port: 40055
       gnmi_port: 50055
   - id: 8808_FOX2506P2QT_fury
