--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -1,5 +1,6 @@
 testbeds:
-  - id: 8808_FOX2506P2QT
+  8808_FOX2506P2QT: &8808_FOX2506P2QT_DEFAULT
+    hw: 8808_FOX2506P2QT
     owner: kjahed
     testbed: topologies/cisco/hw/8808_FOX2506P2QT/testbed
     binding: topologies/cisco/hw/8808_FOX2506P2QT/binding
@@ -8,37 +9,37 @@ testbeds:
       host: 10.85.17.225
       controller_port: 40055
       gnmi_port: 50055
-  - id: 8808_FOX2506P2QT_fury
-    owner: kjahed
-    testbed: topologies/cisco/hw/8808_FOX2506P2QT/testbed
+    ixweb:
+      host: 10.85.84.118
+      username: "admin"
+      password: "Admin@123"
+  8808_FOX2506P2QT_fury:
+    <<: *8808_FOX2506P2QT_DEFAULT
     binding: topologies/cisco/hw/8808_FOX2506P2QT/binding_fury
-    baseconf: topologies/cisco/hw/8808_FOX2506P2QT/baseconfig.proto
-  - id: 8808_FOX2506P2QT_fury_gb
-    owner: kjahed
-    testbed: topologies/cisco/hw/8808_FOX2506P2QT/testbed_fury_gb
+  8808_FOX2506P2QT_fury_gb:
+    <<: *8808_FOX2506P2QT_DEFAULT
     binding: topologies/cisco/hw/8808_FOX2506P2QT/binding_fury_gb
-    baseconf: topologies/cisco/hw/8808_FOX2506P2QT/baseconfig.proto
-  - id: 8808-36FH_FOX2613PHWL
+  8808-36FH_FOX2613PHWL:
     owner: wdolaast
     testbed: topologies/cisco/hw/8808-36FH_FOX2613PHWL/testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2613PHWL/binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2613PHWL/basecfg-ottawa-lab2.proto
-  - id: 8808-FOX2508P0JU
+  8808-FOX2508P0JU:
     owner: vbhan
     testbed: topologies/cisco/hw/8808-FOX2508P0JU/testbed
     binding: topologies/cisco/hw/8808-FOX2508P0JU/binding-ipv6-tun
     baseconf: topologies/cisco/hw/8808-FOX2508P0JU/base_config_mgmt_vrf.proto
-  - id: 8808-FOX2508P0JU-Fury
+  8808-FOX2508P0JU-Fury:
     owner: vbhan
     testbed: topologies/cisco/hw/8808-FOX2508P0JU/testbed_fury
     binding: topologies/cisco/hw/8808-FOX2508P0JU/binding-ipv6-tun-Fury
     baseconf: topologies/cisco/hw/8808-FOX2508P0JU/base_config_mgmt_vrf.proto
-  - id: 8808-FOX2508P0JU-Fury-GB
+  8808-FOX2508P0JU-Fury-GB:
     owner: vbhan
     testbed: topologies/cisco/hw/8808-FOX2508P0JU/testbed
     binding: topologies/cisco/hw/8808-FOX2508P0JU/binding-ipv6-tun-Fury-GB
     baseconf: topologies/cisco/hw/8808-FOX2508P0JU/base_config_mgmt_vrf.proto        
-  - id: 8808-36FH_FOX2504P3CE
+  8808-36FH_FOX2504P3CE:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2504P3CE/testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE/binding
@@ -46,90 +47,90 @@ testbeds:
     overrides:
       TRANSIT_WECMP (CD2 TC):
         binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE/basecfgfp-ottawa-lab1-r1-transit-wecmp.proto
-  - id: 8808-36FH_FOX2504P3CE_fury
+  8808-36FH_FOX2504P3CE_fury:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2504P3CE/fury.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE/fury.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2504P3CE/basecfgfp-ottawa-lab1-r1.proto
-  - id: 8808-36FH_FOX2504P3CE_mix
+  8808-36FH_FOX2504P3CE_mix:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2504P3CE/mix.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE/mix.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2504P3CE/basecfgfp-ottawa-lab1-r1.proto
-  - id: 8201-32FH_FLM254206E7
+  8201-32FH_FLM254206E7:
     owner: kjahed
     testbed: topologies/cisco/hw/8201-32FH_FLM254206E7/testbed
     binding: topologies/cisco/hw/8201-32FH_FLM254206E7/binding
     baseconf: topologies/cisco/hw/8201-32FH_FLM254206E7/basecfgfp-ottawa-lab2-r3.proto
-  - id: 8201-32FH_FLM254206E7_transit_wecmp
+  8201-32FH_FLM254206E7_transit_wecmp:
     owner: kjahed
     testbed: topologies/cisco/hw/8201-32FH_FLM254206E7/testbed
     binding: topologies/cisco/hw/8201-32FH_FLM254206E7/binding
     baseconf: topologies/cisco/hw/8201-32FH_FLM254206E7/basecfgfp-ottawa-lab2-r3-transit-wecmp.proto
     pyats_testbed: topologies/cisco/hw/8201-32FH_FLM254206E7/pyats.yaml
-  - id: 8201-32FH_FLM253900HJ
+  8201-32FH_FLM253900HJ:
     owner: arvbaska
     testbed: topologies/cisco/hw/8201-32FH_FLM253900HJ/testbed
     binding: topologies/cisco/hw/8201-32FH_FLM253900HJ/binding
     baseconf: topologies/cisco/hw/8201-32FH_FLM253900HJ/baseconfig.proto
-  - id: 8201-1DUT-1ATE
+  8201-1DUT-1ATE:
     sim: true
     topology: topologies/cisco/pyvxr/8201-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE/basefp.conf
-  - id: 8201-1DUT-1ATE-vrf-mgmt
+  8201-1DUT-1ATE-vrf-mgmt:
     sim: true
     topology: topologies/cisco/pyvxr/8201-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE/basefp-mgmt-vrf.conf
-  - id: 8202-1DUT-1ATE-vrf-mgmt
+  8202-1DUT-1ATE-vrf-mgmt:
     sim: true
     topology: topologies/cisco/pyvxr/8202-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8202-1DUT-1ATE/basefp-mgmt-vrf.conf    
-  - id: 8808-1DUT-1ATE
+  8808-1DUT-1ATE:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE/basefp.conf
-  - id: 8808-1DUT-1ATE-vrf-mgmt
+  8808-1DUT-1ATE-vrf-mgmt:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE/basefp-mgmt-vrf.conf
-  - id: 8808-1DUT-1ATE-FURY
+  8808-1DUT-1ATE-FURY:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE-FURY/topo.yaml
     baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE-FURY/basefp.conf
-  - id: 8808-1DUT-1ATE-FURY-vrf-mgmt
+  8808-1DUT-1ATE-FURY-vrf-mgmt:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE-FURY/topo.yaml
     baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE-FURY/basefp-mgmt-vrf.conf
-  - id: 8808-2DUT
+  8808-2DUT:
     sim: true
     topology: topologies/cisco/pyvxr/8808-2DUT/topo.yaml
     baseconf: 
       dut1: topologies/cisco/pyvxr/8808-2DUT/basefp.conf
       dut2: topologies/cisco/pyvxr/8808-2DUT/basefp_peer.conf
-  - id: 8808-OC
+  8808-OC:
     sim: true
     topology: topologies/cisco/pyvxr/8808-OC/topo.yaml
     baseconf: 
       dut: topologies/cisco/pyvxr/8808-OC/basefp.conf
       peer: topologies/cisco/pyvxr/8808-OC/basefp-peer.conf
-  - id: 8808-BIT 
+  8808-BIT: 
     sim: true
     topology: topologies/cisco/pyvxr/8808-BIT/topo.yaml
     baseconf:
       dut: topologies/cisco/pyvxr/8808-BIT/basefp.conf
       peer: topologies/cisco/pyvxr/8808-BIT/basefp-peer.conf
-  - id: 8808-OC-FURY
+  8808-OC-FURY:
     sim: true
     topology: topologies/cisco/pyvxr/8808-OC-FURY/topo.yaml
     baseconf: 
       dut: topologies/cisco/pyvxr/8808-OC-FURY/basefp.conf
       peer: topologies/cisco/pyvxr/8808-OC-FURY/basefp-peer.conf
-  - id: 8808_FOX2625PLW8
+  8808_FOX2625PLW8:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2625PLW8/testbed
     binding: topologies/cisco/hw/8808_FOX2625PLW8/binding
     baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig.proto
-  - id: 8808_FOX2625PLW8_v6_gNMI
+  8808_FOX2625PLW8_v6_gNMI:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2625PLW8/testbed
     binding: topologies/cisco/hw/8808_FOX2625PLW8/binding_gnmi_v6
@@ -139,7 +140,7 @@ testbeds:
         baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig_gnmi_v6_mgmt_PBR_GB.proto   
       TRANSIT_WECMP:
         baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig_gnmi_v6_mgmt_PBR_GB.proto   
-  - id: 8808_FOX2625PLW8_v6_gNMI_fury
+  8808_FOX2625PLW8_v6_gNMI_fury:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2625PLW8/testbed
     binding: topologies/cisco/hw/8808_FOX2625PLW8/binding_gnmi_v6_fury
@@ -149,31 +150,31 @@ testbeds:
         baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig_gnmi_v6_mgmt_PBR_Fury.proto   
       TRANSIT_WECMP:
         baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig_gnmi_v6_mgmt_PBR_Fury.proto                 
-  - id: moji_sfd
+  moji_sfd:
     owner: mbagherz
     testbed: topologies/cisco/hw/8808-36FH_FOX2506P5XE/testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2506P5XE/binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2506P5XE/basecfgfp.proto
-  - id: moji_sfd_gnsi
+  moji_sfd_gnsi:
     owner: mbagherz
     testbed: topologies/cisco/hw/8808-36FH_FOX2506P5XE/testbed-gnsi
     binding: topologies/cisco/hw/8808-36FH_FOX2506P5XE/binding-gnsi
     baseconf: topologies/cisco/hw/8808-36FH_FOX2506P5XE/basecfgfp.proto
-  - id: 8808_FOX2643Q39J
+  8808_FOX2643Q39J:
     owner: harikri4
     testbed: topologies/cisco/hw/8808_FOX2643Q39J/testbed
     binding: topologies/cisco/hw/8808_FOX2643Q39J/binding_gnmi_v6
     baseconf: topologies/cisco/hw/8808_FOX2643Q39J/baseconfig_gnmi_v6_mgmt.proto
-  - id: 8808_FOX2643Q39J_gnsi
+  8808_FOX2643Q39J_gnsi:
     owner: harikri4
     testbed: topologies/cisco/hw/8808_FOX2643Q39J/single_testbed
     binding: topologies/cisco/hw/8808_FOX2643Q39J/single_binding_gnsi
     baseconf: topologies/cisco/hw/8808_FOX2643Q39J/baseconfig_gnmi_v6_mgmt_gnsi.proto       
-  - id: 8201-1DUT-1ATE-9PORTS
+  8201-1DUT-1ATE-9PORTS:
     sim: true
     topology: topologies/cisco/pyvxr/8201-1DUT-1ATE-9PORTS/topo.yaml
     baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE-9PORTS/basefp.conf 
-  - id: 8812-FOC2326NBZB
+  8812-FOC2326NBZB:
     owner: saarvind
     testbed: topologies/cisco/hw/8812-FOC2326NBZB/testbed
     binding: topologies/cisco/hw/8812-FOC2326NBZB/binding
@@ -182,67 +183,62 @@ testbeds:
 
 #OTG
 
-  - id: 8808-36FH_FOX2506P5XE_OTG
+  8808-36FH_FOX2506P5XE_OTG:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2506P5XE_OTG/atedut_otg_moji.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2506P5XE_OTG/atedut_otg_moji.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2506P5XE/basecfgfp.proto
-  - id: 8808-36FH_FOX2504P3CE_OTG
+  8808-36FH_FOX2504P3CE_OTG:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2504P3CE_OTG/otg.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE_OTG/otg.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2504P3CE/basecfgfp-ottawa-lab1-r1.proto
-  - id: 8808-36FH_FOX2504P3CE_OTG_fury
+  8808-36FH_FOX2504P3CE_OTG_fury:
     owner: mananpat
     testbed: topologies/cisco/hw/8808-36FH_FOX2504P3CE_OTG/fury.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2504P3CE_OTG/fury.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2504P3CE/basecfgfp-ottawa-lab1-r1.proto
-  - id: 8201-32FH_FLM253900HJ_OTG
+  8201-32FH_FLM253900HJ_OTG:
     owner: arvbaska
     testbed: topologies/cisco/hw/8201-32FH_FLM253900HJ_OTG/otg.testbed
     binding: topologies/cisco/hw/8201-32FH_FLM253900HJ_OTG/otg.binding
     baseconf: topologies/cisco/hw/8201-32FH_FLM253900HJ/baseconfig.proto
-  - id: 8201-32FH_FLM254206E7_OTG
+  8201-32FH_FLM254206E7_OTG:
     owner: kjahed
     testbed: topologies/cisco/hw/8201-32FH_FLM254206E7_OTG/otg.testbed
     binding: topologies/cisco/hw/8201-32FH_FLM254206E7_OTG/otg.binding
     baseconf: topologies/cisco/hw/8201-32FH_FLM254206E7/basecfgfp-ottawa-lab2-r3.proto
-  - id: 8808_FOX2506P2QT_OTG
-    owner: kjahed
-    testbed: topologies/cisco/hw/8808_FOX2506P2QT_OTG/otg.testbed
-    binding: topologies/cisco/hw/8808_FOX2506P2QT_OTG/otg.binding
-    baseconf: topologies/cisco/hw/8808_FOX2506P2QT_OTG/baseconfig.proto
-  - id: 8808_FOX2625PLW8_OTG
+  8808_FOX2625PLW8_OTG:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2625PLW8_OTG/otg.testbed
     binding: topologies/cisco/hw/8808_FOX2625PLW8_OTG/otg.binding
     baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig.proto
-  - id: 8808_FOX2625PLW8_OTG_v6_gNMI
+  8808_FOX2625PLW8_OTG_v6_gNMI:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2625PLW8_OTG/otg.testbed
     binding: topologies/cisco/hw/8808_FOX2625PLW8_OTG/otg.binding_gnmi_v6
     baseconf: topologies/cisco/hw/8808_FOX2625PLW8/baseconfig_gnmi_v6_mgmt.proto
-  - id: 8808_FOX2643Q39J_OTG
+  8808_FOX2643Q39J_OTG:
     owner: arvbaska
     testbed: topologies/cisco/hw/8808_FOX2643Q39J_OTG/otg.testbed
     binding: topologies/cisco/hw/8808_FOX2643Q39J_OTG/otg.binding_gnmi_v6
     baseconf: topologies/cisco/hw/8808_FOX2643Q39J/baseconfig_gnmi_v6_mgmt.proto
-  - id: 8808-36FH_FOX2613PHWL_OTG
+  8808-36FH_FOX2613PHWL_OTG:
     owner: wdolaast
     testbed: topologies/cisco/hw/8808-36FH_FOX2613PHWL_OTG/otg.testbed
     binding: topologies/cisco/hw/8808-36FH_FOX2613PHWL_OTG/otg.binding
     baseconf: topologies/cisco/hw/8808-36FH_FOX2613PHWL/basecfg-ottawa-lab2.proto
-  - id: 8808-FOX2508P0JU_OTG
+  8808-FOX2508P0JU_OTG:
     owner: vbhan
     testbed: topologies/cisco/hw/8808-FOX2508P0JU_OTG/otg.testbed
     binding: topologies/cisco/hw/8808-FOX2508P0JU_OTG/otg.binding-ipv6-tun
     baseconf: topologies/cisco/hw/8808-FOX2508P0JU/base_config_mgmt_vrf.proto
-  - id: 8812-FOC2326NBZB_OTG
+  8812-FOC2326NBZB_OTG:
     owner: saarvind
     testbed: topologies/cisco/hw/8812-FOC2326NBZB_OTG/otg.testbed
     binding: topologies/cisco/hw/8812-FOC2326NBZB_OTG/otg.binding
     baseconf: topologies/cisco/hw/8812-FOC2326NBZB/qos-base-config.proto
-  - id: 8201-32FH-FLM254306M8_OTG
+  8201-32FH-FLM254306M8_OTG:
     owner: mananpat
     testbed: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.testbed
     binding: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.binding
