--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -264,6 +264,13 @@ tests:
       - arvbaska
     mustpass: true
     priority: 37
+  - name: RT-5.6 (Interface Loopback mode)
+    path: feature/experimental/interface/interface_loopback_aggregate/otg_tests/interface_loopback_aggregate
+    owners:
+      - agvarghe
+    mustpass: true
+    priority: 38
+    pr: 2079
   - name: RT-5.3 (Aggregate Balancing)
     path: feature/interface/aggregate/ate_tests/balancing_test
     owners:
