--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -35,3 +35,10 @@ tests:
   timeout: 21000
   owners:
     - harikri4,mbagherz
+- name: authzfp (Authz Functional Tests)
+    path: feature/security/gnsi/authz/tests
+  args:
+    - '-test_infra_id="cafyauto"'
+  pr: 2136
+  mustpass: true
+  timeout: 21000
