--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -35,7 +35,7 @@ tests:
   timeout: 21000
   owners:
     - harikri4,mbagherz
-- name: authzfp (Authz Functional Tests)
+- name: AUTHZFP (Authz Functional Tests)
   path: feature/security/gnsi/authz/tests
   args:
     - '-test_infra_id="cafyauto"'
