--- a/topologies/kne/juniper/ncptx/config.cfg
+++ b/topologies/kne/juniper/ncptx/config.cfg
@@ -1,5 +1,5 @@
 system {
-    host-name cptx;
+    host-name ncptx;
     root-authentication {
         encrypted-password "$6$7uA5z8vs$cmHIvL0aLU4ioWAHPR0PLeU/mJj.JO/5pQVQoqRlInK3fJNTLYLhwiDi.Q6gHhltSB3S1P/.raEsuDSH7akcJ/"; ## SECRET-DATA
     }
