--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -169,8 +169,8 @@ tests:
     timeout: 3600
     mustpass: true
     args:
-      - '-osfile="/auto/ced-ottawa/arvbaska/b4/8000-golden-x86_64-24.1.1.202G-203G.iso"'
-      - '-osver="24.1.1.202G-203G"'
+      - '-osfile="/auto/ioxdepot6/GISO/giso_build_lindt/giso_custom_create/rmariapp_2023-10-04_20-28-11_UTC/output_gisobuild/giso/8000-golden-x86_64-24.1.1.210G-iso.iso"'
+      - '-osver="24.1.1.210G"'
     skip: true
   - name: gNOI-5.1 (Ping Test)
     path: feature/gnoi/system/tests/ping_test
