--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -170,7 +170,7 @@ tests:
     mustpass: true
     args:
       - '-osfile="/auto/ioxdepot6/GISO/giso_build_lindt/giso_custom_create/rmariapp_2023-10-04_20-28-11_UTC/output_gisobuild/giso/8000-golden-x86_64-24.1.1.210G-iso.iso"'
-      - '-osver="24.1.1.210G"'
+      - '-osver="24.1.1.210G-iso"'
     skip: true
   - name: gNOI-5.1 (Ping Test)
     path: feature/gnoi/system/tests/ping_test
