--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -24,7 +24,8 @@ tests:
   mustpass: true
   timeout: 21000
   owners:
-    - harikri4,mbagherz
+    - harikri4
+    - mbagherz
 - name: authz1.3 (Authz Scale Tests)
   path: feature/security/gnsi/authz/cisco/tests
   args:
@@ -46,6 +47,7 @@ tests:
 - name: CERTZBasic (Certz Internal Basic Tests) 
   path: feature/security/gnsi/certz/cisco/tests
   owners:
-    - venthota,mbagherz
+    - venthota
+    - mbagherz
   mustpass: true
   timeout: 21000
