--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -39,6 +39,8 @@ tests:
   path: feature/security/gnsi/authz/tests
   args:
     - '-test_infra_id="cafyauto"'
+    - '-ca_key_pem=""'
+    - '-ca_cert_pem=""'
   pr: 2136
   mustpass: true
   timeout: 21000
