--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -208,6 +208,7 @@ testbeds:
 
 # OTG
   8201-32FH-FLM254306M8_OTG:
+    hw: 8201-32FH-FLM254306M8_OTG
     owner: mananpat
     testbed: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.testbed
     binding: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.binding
