--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -36,10 +36,19 @@ tests:
   timeout: 21000
   owners:
     - harikri4,mbagherz
-- name: AUTHZFP (Authz Functional Tests with spiffe id)
+- name: AUTHZFP1 (Authz Functional Tests with spiffe id (CSCwh84990) )
   path: feature/security/gnsi/authz/tests
   args:
     - '-test_infra_id="cafyauto"'
+    - '-common_name=false'
+  pr: 2136
+  mustpass: true
+  timeout: 21000
+- name: AUTHZFP2 (Authz Functional Tests with spiffe id and common id)
+  path: feature/security/gnsi/authz/tests
+  args:
+    - '-test_infra_id="cafyauto"'
+    - '-common_name=true'
   pr: 2136
   mustpass: true
   timeout: 21000
