--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -620,7 +620,8 @@ tests:
     owners:
       - mbagherz
     mustpass: true
-    I-PR: 928
+    pr: 928
+    internal: true
   - name: gNOI-2.1 (Packet-based Link Qualification)
     path: feature/gnoi/packet_link_qualification/tests/packet_link_qualification_test
     owners:
