Add apt-get update

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -4,6 +4,7 @@ steps:
     args: 
       - -c
       - |
+        apt-get update
         apt-get install -y libpcap-dev
         go install honnef.co/go/tools/cmd/staticcheck@latest
         staticcheck ./...
