--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -73,8 +73,8 @@ jobs:
     # Dependency for Go module github.com/google/gopacket
     - name: Install libpcap-dev
       run: sudo apt-get -y install libpcap-dev
-    - name: Go vet
-      run: GOGC=30 go vet ./...
+#    - name: Go vet
+#      run: GOGC=30 go vet ./...
     - name: Gofmt
       run: |
         # gofmt always returns true, so we use grep '^' which returns
@@ -106,7 +106,7 @@ jobs:
       run: |
         # staticcheck requires a lot of free disk space in /tmp.  Free up worker
         # space by removing unnecessary tooling.
-        rm -rf /usr/share/dotnet
-        rm -rf /usr/local/lib/android
-        rm -rf /opt/hostedtoolcache
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/hostedtoolcache
         GOGC=30 staticcheck ./...
