--- a/exec/tests/v2/transit_wecmp.yaml
+++ b/exec/tests/v2/transit_wecmp.yaml
@@ -2,7 +2,7 @@ name: transit_wecmp
 owners: 
   - mananpat
 testbeds:
-  - 8808-36FH_FOX2504P3CE_mix
+  - 8808-36FH_FOX2504P3CE
 tests:
 - name: TRANSIT_WECMP
   path: feature/gribi/ate_tests/cisco/transit_wecmp_flush
