--- a/exec/tests/v2/fp_published_otg.yaml
+++ b/exec/tests/v2/fp_published_otg.yaml
@@ -58,6 +58,7 @@ tests:
       - agvarghe
     mustpass: true
     priority: 33
+    skip: true
   - name: gNMI-1.10 (Telemetry Basic Check)
     path: feature/gnmi/otg_tests/telemetry_basic_check_test
       - '-arg_qos_baseconfig_present="false"'
@@ -149,7 +150,7 @@ tests:
       - arvbaska
     mustpass: true
     priority: 47
-    skip: false
+    skip: true
   - name: RT-1.2 (BGP Policy and Route Installation)
     path: feature/bgp/policybase/otg_tests/route_installation_test
     owners:
@@ -171,7 +172,7 @@ tests:
       - sprem
     mustpass: true
     priority: 54
-    skip: false
+    skip: true
   - name: RT-1.5 (BGP Prefix Limit)
     path: feature/bgp/prefixlimit/otg_tests/bgp_prefix_limit_test
     owners:
@@ -192,6 +193,7 @@ tests:
     mustpass: false
     priority: 52
     timeout: 4200
+    skip: true
   - name: RT-1.19 (BGP 2-Byte and 4-Byte ASN support)
     path: feature/experimental/bgp/otg_tests/bgp_2byte_4byte_asn
     owners:
@@ -199,11 +201,13 @@ tests:
     mustpass: false
     priority: 52
     timeout: 4200
+    skip: true
   - name: RT-1.24 (BGP 2-Byte and 4-Byte ASN support with policy)
     path: feature/experimental/bgp/otg_tests/bgp_2byte_4byte_asn_policy_test
     owners:
       - mananpat
     mustpass: false
+    skip: true
   - name: RT-2.1 (Base IS-IS Process and Adjacencies)
     path: feature/experimental/isis/otg_tests/base_adjacencies_test
     owners:
@@ -299,7 +303,7 @@ tests:
     pr: 1654
     owners:
       - mananpat
-    skip: false
+    skip: true
     mustpass: true
     priority: 3
   - name: TE-3.5 (Ordering ACK Received)
