--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,49 +8,6 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      uses: actions/setup-go@v2.1.3
-      with:
-        go-version: 1.21.x
-    - name: Cache
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/go/pkg/mod
-          ~/.cache/go-build
-        key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
-        restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
-    - name: Build
-      run: go build -v ./...
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Go
-        uses: actions/setup-go@v2.1.3
-        with:
-          go-version: 1.21.x
-      - name: Cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
-          restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
-      # Dependency for Go module github.com/google/gopacket
-      - name: Install libpcap-dev
-        run: sudo apt-get -y install libpcap-dev
-      - run: go test -v -coverprofile=profile.cov $(go list ./... | grep -v /.*test.*)
-      - name: Send coverage
-        uses: shogo82148/actions-goveralls@v1
-        with:
-          path-to-profile: profile.cov
-
   static_analysis:
     name: Static Analysis
     runs-on: ubuntu-latest
@@ -70,6 +27,12 @@ jobs:
           ~/.cache/staticcheck
         key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
         restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
+    - name: Check cache
+      run: |
+        df -h
+        du -sh /home/runner/work
+        du -sh /home/runner/work/featureprofiles/featureprofiles
+        ls -laR /home/runner/work
     # Dependency for Go module github.com/google/gopacket
     - name: Install libpcap-dev
       run: sudo apt-get -y install libpcap-dev
