--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,11 @@ jobs:
         go-version: '1.21'
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: Check disk usage
+      run: |
+        df -h
+        du -sh /home/runner
+        ls -laR /home/runner
     - name: Cache
       uses: actions/cache@v3
       with:
@@ -30,9 +35,8 @@ jobs:
     - name: Check cache
       run: |
         df -h
-        du -sh /home/runner/work
-        du -sh /home/runner/work/featureprofiles/featureprofiles
-        ls -laR /home/runner/work
+        du -sh /home/runner
+        ls -laR /home/runner
     # Dependency for Go module github.com/google/gopacket
     - name: Install libpcap-dev
       run: sudo apt-get -y install libpcap-dev
