--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,48 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Go
+      uses: actions/setup-go@v2.1.3
+      with:
+        go-version: 1.21.x
+    - name: Cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+        key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+        restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
+    - name: Build
+      run: go build -v ./...
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.21.x
+      - name: Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+          restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
+      # Dependency for Go module github.com/google/gopacket
+      - name: Install libpcap-dev
+        run: sudo apt-get -y install libpcap-dev
+      - run: go test -v -coverprofile=profile.cov $(go list ./... | grep -v /.*test.*)
+      - name: Send coverage
+        uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: profile.cov
   static_analysis:
     name: Static Analysis
     runs-on: ubuntu-latest
@@ -16,20 +58,15 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.21'
+    # Go & staticcheck build cache require a lot of disk space.  Reclaim extra
+    # space for the container by removing unnecessary tooling.
     - name: Free additional disk space
       run: |
-        # Go build cache requires a lot of disk.  Reclaim
-        # extra container space by removing unnecessary tooling.
         sudo rm -rf /usr/share/dotnet
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /opt/hostedtoolcache/CodeQL
     - name: Checkout code
       uses: actions/checkout@v3
-    - name: Check disk usage
-      run: |
-        df -h
-        du -sh /home/runner
-        du --max-depth=4 -h /home/runner | sort -rh
     - name: Cache
       uses: actions/cache@v3
       with:
@@ -39,11 +76,6 @@ jobs:
           ~/.cache/staticcheck
         key: ${{ github.job }}-${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
         restore-keys: ${{ github.job }}-${{ runner.os }}-go-build-
-    - name: Check cache
-      run: |
-        df -h
-        du -sh /home/runner
-        du --max-depth=4 -h /home/runner | sort -rh
     # Dependency for Go module github.com/google/gopacket
     - name: Install libpcap-dev
       run: sudo apt-get -y install libpcap-dev
@@ -78,4 +110,3 @@ jobs:
       run: go install honnef.co/go/tools/cmd/staticcheck@latest
     - name: Run staticcheck
       run: GOGC=30 staticcheck ./...
-
