p4rt-5.2 additional timeout

--- a/exec/tests/v2/fp_published_otg.yaml
+++ b/exec/tests/v2/fp_published_otg.yaml
@@ -126,6 +126,7 @@ tests:
       - sprem
     priority: 5
     mustpass: true
+    timeout: 7200
   - name: P4RT-6.1 (Required Packet I/O rate Performance)
     path: feature/experimental/p4rt/otg_tests/performance_test
     owners:
