--- a/.github/workflows/protobufs.yml
+++ b/.github/workflows/protobufs.yml
@@ -46,7 +46,10 @@ jobs:
         go list -f "${PROTOBUF_IMPORT_DIR}/{{ .Path }}" -m github.com/openconfig/ondatra | xargs -L1 dirname | sort | uniq | xargs mkdir -p
         # Create symlink
         go list -f "{{ .Dir }} "${PROTOBUF_IMPORT_DIR}"/{{ .Path }}" -m github.com/openconfig/ondatra | xargs -L1 -- ln -s
-        find . -name \*.proto -exec api-linter -I./"${PROTOBUF_IMPORT_DIR}" --disable-rule all --enable-rule core {} \+
+        echo debug1
+        find . -name \*.proto
+        pwd
+        find . -name \*.proto -exec api-linter -I./"${PROTOBUF_IMPORT_DIR}" -I. --disable-rule all --enable-rule core {} \+
     - name: Compile topology binding textprotos
       run: |
         fail=0
