--- a/.github/workflows/protobufs.yml
+++ b/.github/workflows/protobufs.yml
@@ -42,13 +42,15 @@ jobs:
         find "${PROTOBUF_IMPORT_DIR}" -type d -empty -delete
         # Download the required dependencies
         go mod download
+        # Copy all of the proto files into the right directory.
+        fp_proto_dir="${PROTOBUF_IMPORT_DIR}/github.com/openconfig/featureprofiles"
+        mkdir -p "${fp_proto_dir}"
+        cp --parents `find -name \*.proto` "${fp_proto_dir}"
         # Get ondatra modules we use and create required directory structure
         go list -f "${PROTOBUF_IMPORT_DIR}/{{ .Path }}" -m github.com/openconfig/ondatra | xargs -L1 dirname | sort | uniq | xargs mkdir -p
         # Create symlink
         go list -f "{{ .Dir }} "${PROTOBUF_IMPORT_DIR}"/{{ .Path }}" -m github.com/openconfig/ondatra | xargs -L1 -- ln -s
-        mkdir -p ${PROTOBUF_IMPORT_DIR}/github.com/openconfig/featureprofiles
-        cp -r proto ${PROTOBUF_IMPORT_DIR}/github.com/openconfig/featureprofiles
-        find . -name \*.proto -exec api-linter -I./"${PROTOBUF_IMPORT_DIR}" --disable-rule all --enable-rule core {} \+
+        find "${fp_proto_dir}" -name \*.proto -exec api-linter -I./"${PROTOBUF_IMPORT_DIR}" --disable-rule all --enable-rule core {} \+
     - name: Compile topology binding textprotos
       run: |
         fail=0
