--- a/exec/tests/v2/gnsi_internal_tests.yaml
+++ b/exec/tests/v2/gnsi_internal_tests.yaml
@@ -39,7 +39,7 @@ tests:
   owners:
     - harikri4
 - name: AUTHZFP (Authz Functional Tests with spiffe id)
-  path: feature/security/gnsi/authz/tests
+  path: feature/security/gnsi/authz/tests/authz/authz1_4_test.go
   args:
     - '-test_infra_id="cafyauto"'
   pr: 2136
