--- a/exec/tests/v2/fp_published.yaml
+++ b/exec/tests/v2/fp_published.yaml
@@ -342,6 +342,7 @@ tests:
     mustpass: false
     priority: 37
     skip: false
+    timeout: 4200
   - name: gNMI-1.8 (Configuration Metadata-only Retrieve and Replace)
     path: feature/system/gnmi/metadata/tests/annotation_test
     owners:
