--- a/.github/workflows/nosimage.yml
+++ b/.github/workflows/nosimage.yml
@@ -19,12 +19,12 @@ jobs:
         go-version: stable
         cache: false
     - name: Generate Examples
-      run: 
+      run: |
         cd tools/nosimage
         go run example/generate_example.go -file-path example/example_nosimageprofile.textproto
         go run example/generate_example.go -file-path example/example_nosimageprofile_invalid.textproto -invalid
     - name: Validate Examples
-      run: 
+      run: |
         cd tools/nosimage
         go run validate/validate.go -file example/example_nosimageprofile.textproto; rm -rf tmp
 
