test don't expect failure

--- a/.github/workflows/nosimage.yml
+++ b/.github/workflows/nosimage.yml
@@ -28,7 +28,7 @@ jobs:
         cd tools/nosimage
         go run validate/validate.go -file example/example_nosimageprofile.textproto; rm -rf tmp
 
-        if go run validate/validate.go -file example/example_nosimageprofile_invalid.textproto; then
+        if ! go run validate/validate.go -file example/example_nosimageprofile_invalid.textproto; then
           echo "Validation passed, but failure expected"
           exit 1
         fi
