--- a/.github/workflows/nosimage.yml
+++ b/.github/workflows/nosimage.yml
@@ -23,11 +23,14 @@ jobs:
         cd tools/nosimage
         go run example/generate_example.go -file-path example/example_nosimageprofile.textproto
         go run example/generate_example.go -file-path example/example_nosimageprofile_invalid.textproto -invalid
-    - name: Validate Examples
+    - name: Validate Good Example
       run: |
         cd tools/nosimage
         go run validate/validate.go -file example/example_nosimageprofile.textproto; rm -rf tmp
 
+    - name: Validate Bad Example
+      run: |
+        cd tools/nosimage
         if go run validate/validate.go -file example/example_nosimageprofile_invalid.textproto; then
           echo "Validation passed, but failure expected"
           exit 1
