--- a/.github/workflows/nosimage.yml
+++ b/.github/workflows/nosimage.yml
@@ -18,11 +18,14 @@ jobs:
       with:
         go-version: stable
         cache: false
-    - name: Generate Examples
+    - name: Generate Examples and Check No Diff
       run: |
         cd tools/nosimage
         go run example/generate_example.go -file-path example/example_nosimageprofile.textproto
         go run example/generate_example.go -file-path example/example_nosimageprofile_invalid.textproto -invalid
+
+        git diff --exit-code --ignore-all-space --ignore-blank-lines
+
     - name: Validate Good Example
       run: |
         cd tools/nosimage
