--- a/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
+++ b/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
@@ -8,17 +8,15 @@ simulation:
     hours: 72
     pending_timeout: 30
 devices: 
-  ate: 
-    data_ports: 
-      - 1/1
-      - 1/2
-      - 1/3
-      - 1/4
-    ixia_images: 
-      chassis: /auto/vxr/images/ixia/Ixia_Virtual_Chassis_9.10_KVM.qcow2
-      load: /auto/vxr/images/ixia/Ixia_Virtual_Load_Module_9.10_KVM.qcow2
-      windows: /auto/vxr/images/ixia/IxNetworkWeb_KVM_9.10.2011.180.qcow2
-    platform: ixia
+  ixia-c:     
+    platform: linux
+    vcpu: 16
+    memory: "32GB"
+    image: /auto/vxr/images/ixia/ixia-c.qcow2
+    linux_username: vxr
+    linux_password: "cisco123"
+    linux_prompt: 'vxr@vxr-vm:~\$'
+    xr_port_redir: [22, 35000, 31001, 31002, 31003] 
   dut: 
     cvac: $BASE_CONF_PATH
     linecard_types: 
@@ -35,13 +33,13 @@ connections:
   hubs: 
     port1: 
       - dut.FourHundredGigE0/0/0/10
-      - ate.1/1
+      - ixia-c.eth1
     port2: 
       - dut.FourHundredGigE0/0/0/11
-      - ate.1/2
+      - ixia-c.eth2
     port3: 
       - dut.FourHundredGigE0/0/0/12
-      - ate.1/3
+      - ixia-c.eth3
     port4: 
       - dut.FourHundredGigE0/0/0/13
-      - ate.1/4
+      - ixia-c.eth4
