--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -188,6 +188,10 @@ testbeds:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE/basefp.conf
+  8808-1DUT-1ATE-OTG:
+    sim: true
+    topology: topologies/cisco/pyvxr/8808-1DUT-1ATE/topo_otg.yaml
+    baseconf: topologies/cisco/pyvxr/8808-1DUT-1ATE/basefp.conf
   8808-1DUT-1ATE-vrf-mgmt:
     sim: true
     topology: topologies/cisco/pyvxr/8808-1DUT-1ATE/topo.yaml
