test local license curl

--- a/topologies/cisco/pyvxr/8808-1DUT-1ATE/topo_otg.yaml
+++ b/topologies/cisco/pyvxr/8808-1DUT-1ATE/topo_otg.yaml
@@ -17,6 +17,8 @@ devices:
     linux_password: "cisco123"
     linux_prompt: 'vxr@vxr-vm:~\$'
     xr_port_redir: [22, 35000, 31001, 31002, 31003]  
+    cli_commands: |
+      curl --data-raw '{"license-address": "10.85.70.247" }' http://localhost:35000/license 
   dut: 
     cvac: $BASE_CONF_PATH
     dual_rp: true
